--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
 <style>
 body {
-    background: lightgreen;
+    background: lightgray;
     font-family: Verdana;
 }  
 #content {
-    background: lightyellow;
+    background: lightblue;
     min-width: 200px;
     max-width: 500px;
     padding: 50px;
@@ -33,18 +33,15 @@ h3 {
         <h1>Job Korver</h1>
         <h2>Freshman in Greenville, South Carolina</h2>
         
-         <p>I am a freshman at Bob Jones University studying computer science with a minor in 
-            mathematics. I work for the Computer Science department as a lab monitor.</p>
+         <p>I am a freshman at Bob Jones University studying Biblical Studies.</p>
          <p>
-            I attend Cornerstone Baptist Church in Greer SC. I have a mobile-friendly 
-            sheet music <a href="https://mobilehymns.org/">website</a> and post weekly service
-            schedules for several churches.
+            I attend Palmetto Baptist Church in Greer SC. 
          </p> 
          <p>
-            I enjoy listening to podcasts and having deep conversations.
+            I enjoy listening to music, podcasts and having deep conversations.
          </p>
         <h3>EDUCATION</h3>
-        Computer Science<br />
+        Biblical Studies<br />
         Bob Jones University
     </div>
            
