--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ h3 {
         
          <p>I am a freshman at Bob Jones University studying Biblical Studies.</p>
          <p>
-            I attend Palmetto Baptist Church in Greer SC. 
+            I attend Palmetto Baptist Church in Powdersville, SC. 
          </p> 
          <p>
             I enjoy listening to music, podcasts and having deep conversations.
